welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:3: error: not found: value avancer
    avancer()
    ^Program:4: error: not found: value estSurJaune
} while (estSurJaune) 
         ^